syntax = "proto3";

enum PixelGuild {
  Nobody = 0;
  Tietokilta = 1;
  Algo = 2;
  Cluster = 3;
  OulunTietoteekkarit = 4;
  TietoTeekkarikilta = 5;
  Digit = 6;
  Sosa = 8;
  Date = 9;
  Tutti = 10;
}
