syntax = "proto3";

message PixelUser {
    int32 id = 1;
}