syntax = "proto3";

import "components/enums/pixelOwners.proto";
import "components/enums/pixelTypes.proto";
import "components/schemas/relativeCoordinate.proto";

option csharp_namespace = "GrpcGeneratedServices";
package Map;

message IncrementalMapUpdateRequest {
  repeated IncrementalMapUpdate updates = 1;

  message IncrementalMapUpdate {
    RelativeCoordinate spawnRelativeCoordinate = 1;
    PixelTypes type = 2;
    PixelOwners owner = 3;
    bool ownPixel = 4;
  }

}

message IncrementalMapUpdateResponse {
  
}

service MapUpdate {
  rpc GetIncremental(IncrementalMapUpdateRequest) returns (IncrementalMapUpdateResponse);
}